1.1.90 (1.2.0 rc1):
-Add: Make it possible to use experimental codecs with ffmpeg
-Add: Make it possible to use user defined arguments with ffmpeg
-Add: Re-add aac/m4a encoding to the ffmpeg plugin
(not completed yet)-Add: Aften plugin
-Change: Query ffmpeg for supported codecs

1.1.0:
-Add: Estonian translation (by Mihkel Tõnnov)
-Add: Serbian translation (by Slobodan Terzić)
-Add: Spanish (Argentinian) translation (by akana_sfe)
-Change: Only use wav as temp codec

1.0.90 (1.1.0 rc1):
-Add: Portuguese translation (by Sérgio Marques)
-Add: Brazilian Portuguese translation (by Tex Weissffudder)
-Add: Russian translation (by Alexey Ivanov)
-Add: Inform the user if there is a better backend available for a given format (e.g. prefer lame over ffmpeg)
-Add: Make it possible to choose the preferred extension for ogg vorbis files
-Add: Playing CD tracks before ripping them
-Add: Fluidsynth plugin
-Add: Possibility to write temporary files to /dev/shm
-Change: Prevent options dialogs from getting too wide
-Change: Automatically remove FAT incompatible characters if output directory is on a FAT volume
-Change: MusePack: Find mpenc, mpcdec and mpcgain backends, too
-Fix: CDDB requests
-Fix: Handle files with dollar signs and backticks (`) correctly
-Fix: Filnames wouldn't be FAT compatible if output mode was copy directory structure
-Fix: Display correct progress when applying Replay Gain to multiple ogg vorbis files
-Fix: Replay Gain Scanner wouldn't work properly with files of different format

1.0.0:
-Add: Option to choose between APE and ID3v2  tags for mp3gain and aacgain
-Add: Hungarian translation (by Dr. Orosz Tamás)
-Add: French translation (by Yannick Ernult)
-Change: Make it possible to overwrite hidden lame parameters with the additional parameters option
-Change: Distinguish between aac and m4a files, where aac is the transport stream and m4a an mp4 container with aac data; mp4 is the video container
-Fix: Call neroAacEnc with the correct bitrate